safe.output
State 3 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 59 conflicts: 15 shift/reduce
State 95 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input prog_body

    3 prog_body: function
    4          | comps
    5          | commands ';'

    6 data_types: TK_INTCONST
    7           | TK_BOOLCONST
    8           | TK_CONSTSTRINGS
    9           | TK_FPCONST

   10 array: TK_IDENTIFIERS '[' ']'
   11      | TK_IDENTIFIERS '[' TK_INTCONST ']'
   12      | TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'

   13 comp_vars: TK_IDENTIFIERS
   14          | array
   15          | comp_vars ',' comp_vars

   16 variables: comp_vars ':' data_types

   17 hasht_vars: '#' comp_vars ':' data_types

   18 constants: TK_CONST TK_IDENTIFIERS '=' TK_INTCONST ':' data_types
   19          | TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_INTCONST ':' data_types
   20          | TK_CONST TK_IDENTIFIERS '=' TK_BOOLCONST ':' data_types
   21          | TK_CONST TK_IDENTIFIERS '=' TK_CONSTSTRINGS ':' data_types
   22          | TK_CONST TK_IDENTIFIERS '=' TK_FPCONST ':' data_types
   23          | TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_FPCONST ':' data_types

   24 func_args: TK_IDENTIFIERS ':' data_types
   25          | TK_IDENTIFIERS '[' ']' ':' data_types
   26          | TK_IDENTIFIERS '[' TK_INTCONST ']' ':' data_types
   27          | func_args ',' func_args

   28 function_head: TK_DEF TK_IDENTIFIERS '(' ')' ':'
   29              | TK_DEF TK_IDENTIFIERS '(' func_args ')' ':'
   30              | TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   31              | TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   32              | TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   33              | TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'

   34 function_ret: TK_RET
   35             | TK_RET exp

   36 function_end: TK_ENDDEF ';'

   37 function_body: variables
   38              | constants
   39              | statements
   40              | exp

   41 commands: function_body
   42         | commands ';' function_body

   43 function: function_head commands ';' function_end
   44         | function_head function_end

   45 comps: TK_COMP TK_IDENTIFIERS ':' '#' hasht_vars function TK_ENDCOMP

   46 exp: TK_FPCONST
   47    | TK_IDENTIFIERS
   48    | TK_INTCONST
   49    | TK_SIGNOP exp
   50    | exp '=' exp
   51    | exp '*' exp
   52    | exp '/' exp
   53    | exp '%' exp
   54    | exp TK_ASSIGNOP exp
   55    | exp TK_OR exp
   56    | exp TK_AND exp
   57    | exp TK_NOT exp
   58    | exp TK_NEQ exp
   59    | exp TK_EQ exp
   60    | exp '<' exp
   61    | exp '>' exp
   62    | exp TK_SMALLER exp
   63    | exp TK_BIGGER exp
   64    | exp TK_SIGNOP exp
   65    | exp TK_POWER exp
   66    | exp '.' exp
   67    | '(' exp ')'
   68    | '[' exp ']'
   69    | exp '(' exp ')'
   70    | TK_CONSTSTRINGS
   71    | TK_BOOLCONST
   72    | array
   73    | funccall_statement

   74 func_expr: func_expr ',' exp
   75          | exp

   76 statements: iff
   77           | for_statement
   78           | while_statement
   79           | break_statement
   80           | continue_statement
   81           | function_ret

   82 break_statement: TK_BREAK

   83 continue_statement: TK_CONTINUE

   84 if_expr: TK_IF '(' exp ')' ':'

   85 iff: if_expr commands ';' TK_ELSE ':' commands ';' TK_ENDIF
   86    | if_expr commands ';' TK_ENDIF

   87 sss_for: TK_INTCONST
   88        | TK_IDENTIFIERS
   89        | sss_for TK_SIGNOP sss_for

   90 for_statement: TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ':' TK_INTCONST ']' ':' commands ';' TK_ENDFOR
   91              | TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ']' ':' commands ';' TK_ENDFOR

   92 while_statement: TK_WHILE '(' exp ')' ':' commands ';' TK_ENDWHILE

   93 funccall_statement: TK_IDENTIFIERS '(' func_expr ')'
   94                   | TK_IDENTIFIERS '(' ')'


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 17 45
    '%' (37) 53
    '(' (40) 28 29 30 31 32 33 67 69 84 92 93 94
    ')' (41) 28 29 30 31 32 33 67 69 84 92 93 94
    '*' (42) 51
    ',' (44) 15 27 74
    '.' (46) 66
    '/' (47) 52
    ':' (58) 16 17 18 19 20 21 22 23 24 25 26 28 29 30 31 32 33 45 84 85 90 91 92
    ';' (59) 5 36 42 43 85 86 90 91 92
    '<' (60) 60
    '=' (61) 18 19 20 21 22 23 50
    '>' (62) 61
    '[' (91) 10 11 12 25 26 68 90 91
    ']' (93) 10 11 12 25 26 68 90 91
    error (256)
    TK_IDENTIFIERS <str> (258) 10 11 12 13 18 19 20 21 22 23 24 25 26 28 29 30 31 32 33 45 47 88 90 91 93 94
    TK_INTCONST <str> (259) 6 11 18 19 26 48 87 90
    TK_FPCONST <str> (260) 9 22 23 46
    TK_BOOLCONST <str> (261) 7 20 71
    TK_CONSTSTRINGS <str> (262) 8 21 70
    TK_DEF <str> (263) 28 29 30 31 32 33
    TK_ENDDEF <str> (264) 36
    TK_RET <str> (265) 34 35
    TK_ARROW <str> (266) 30 31 32 33
    TK_SMALLER <str> (267) 62
    TK_BIGGER <str> (268) 63
    TK_POWER <str> (269) 65
    TK_EQ <str> (270) 59
    TK_NEQ <str> (271) 58
    TK_SIGNOP <str> (272) 19 23 49 64 89
    TK_AND <str> (273) 56
    TK_OR <str> (274) 55
    TK_NOT <str> (275) 57
    TK_ASSIGNOP <str> (276) 54
    TK_CONST <str> (277) 18 19 20 21 22 23
    TK_CONTINUE <str> (278) 83
    TK_BREAK <str> (279) 82
    TK_IF <str> (280) 84
    TK_ENDIF <str> (281) 85 86
    TK_FOR <str> (282) 90 91
    TK_ENDFOR <str> (283) 90 91
    TK_WHILE <str> (284) 92
    TK_ENDWHILE <str> (285) 92
    TK_ELSE <str> (286) 85
    TK_IN <str> (287) 90 91
    TK_COMP <str> (288) 45
    TK_ENDCOMP <str> (289) 45


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    input (51)
        on left: 1 2
        on right: 0 2
    prog_body <str> (52)
        on left: 3 4 5
        on right: 2
    data_types <str> (53)
        on left: 6 7 8 9
        on right: 16 17 18 19 20 21 22 23 24 25 26 30 31
    array <str> (54)
        on left: 10 11 12
        on right: 14 72
    comp_vars <str> (55)
        on left: 13 14 15
        on right: 15 16 17
    variables <str> (56)
        on left: 16
        on right: 37
    hasht_vars <str> (57)
        on left: 17
        on right: 45
    constants <str> (58)
        on left: 18 19 20 21 22 23
        on right: 38
    func_args <str> (59)
        on left: 24 25 26 27
        on right: 27 29 31 33
    function_head <str> (60)
        on left: 28 29 30 31 32 33
        on right: 43 44
    function_ret <str> (61)
        on left: 34 35
        on right: 81
    function_end <str> (62)
        on left: 36
        on right: 43 44
    function_body <str> (63)
        on left: 37 38 39 40
        on right: 41 42
    commands <str> (64)
        on left: 41 42
        on right: 5 42 43 85 86 90 91 92
    function <str> (65)
        on left: 43 44
        on right: 3 45
    comps <str> (66)
        on left: 45
        on right: 4
    exp <str> (67)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 35 40 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 74 75 84 92
    func_expr <str> (68)
        on left: 74 75
        on right: 74 93
    statements <str> (69)
        on left: 76 77 78 79 80 81
        on right: 39
    break_statement <str> (70)
        on left: 82
        on right: 79
    continue_statement <str> (71)
        on left: 83
        on right: 80
    if_expr <str> (72)
        on left: 84
        on right: 85 86
    iff <str> (73)
        on left: 85 86
        on right: 76
    sss_for <str> (74)
        on left: 87 88 89
        on right: 89 90 91
    for_statement <str> (75)
        on left: 90 91
        on right: 77
    while_statement <str> (76)
        on left: 92
        on right: 78
    funccall_statement <str> (77)
        on left: 93 94
        on right: 73


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input prog_body

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . prog_body
    3 prog_body: . function
    4          | . comps
    5          | . commands ';'
   10 array: . TK_IDENTIFIERS '[' ']'
   11      | . TK_IDENTIFIERS '[' TK_INTCONST ']'
   12      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   13 comp_vars: . TK_IDENTIFIERS
   14          | . array
   15          | . comp_vars ',' comp_vars
   16 variables: . comp_vars ':' data_types
   18 constants: . TK_CONST TK_IDENTIFIERS '=' TK_INTCONST ':' data_types
   19          | . TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_INTCONST ':' data_types
   20          | . TK_CONST TK_IDENTIFIERS '=' TK_BOOLCONST ':' data_types
   21          | . TK_CONST TK_IDENTIFIERS '=' TK_CONSTSTRINGS ':' data_types
   22          | . TK_CONST TK_IDENTIFIERS '=' TK_FPCONST ':' data_types
   23          | . TK_CONST TK_IDENTIFIERS '=' TK_SIGNOP TK_FPCONST ':' data_types
   28 function_head: . TK_DEF TK_IDENTIFIERS '(' ')' ':'
   29              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' ':'
   30              | . TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   31              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   32              | . TK_DEF TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   33              | . TK_DEF TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'
   34 function_ret: . TK_RET
   35             | . TK_RET exp
   37 function_body: . variables
   38              | . constants
   39              | . statements
   40              | . exp
   41 commands: . function_body
   42         | . commands ';' function_body
   43 function: . function_head commands ';' function_end
   44         | . function_head function_end
   45 comps: . TK_COMP TK_IDENTIFIERS ':' '#' hasht_vars function TK_ENDCOMP
   46 exp: . TK_FPCONST
   47    | . TK_IDENTIFIERS
   48    | . TK_INTCONST
   49    | . TK_SIGNOP exp
   50    | . exp '=' exp
   51    | . exp '*' exp
   52    | . exp '/' exp
   53    | . exp '%' exp
   54    | . exp TK_ASSIGNOP exp
   55    | . exp TK_OR exp
   56    | . exp TK_AND exp
   57    | . exp TK_NOT exp
   58    | . exp TK_NEQ exp
   59    | . exp TK_EQ exp
   60    | . exp '<' exp
   61    | . exp '>' exp
   62    | . exp TK_SMALLER exp
   63    | . exp TK_BIGGER exp
   64    | . exp TK_SIGNOP exp
   65    | . exp TK_POWER exp
   66    | . exp '.' exp
   67    | . '(' exp ')'
   68    | . '[' exp ']'
   69    | . exp '(' exp ')'
   70    | . TK_CONSTSTRINGS
   71    | . TK_BOOLCONST
   72    | . array
   73    | . funccall_statement
   76 statements: . iff
   77           | . for_statement
   78           | . while_statement
   79           | . break_statement
   80           | . continue_statement
   81           | . function_ret
   82 break_statement: . TK_BREAK
   83 continue_statement: . TK_CONTINUE
   84 if_expr: . TK_IF '(' exp ')' ':'
   85 iff: . if_expr commands ';' TK_ELSE ':' commands ';' TK_ENDIF
   86    | . if_expr commands ';' TK_ENDIF
   90 for_statement: . TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ':' TK_INTCONST ']' ':' commands ';' TK_ENDFOR
   91              | . TK_FOR TK_IDENTIFIERS TK_IN '[' sss_for ':' sss_for ']' ':' commands ';' TK_ENDFOR
   92 while_statement: . TK_WHILE '(' exp ')' ':' commands ';' TK_ENDWHILE
   93 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
   94                   | . TK_IDENTIFIERS '(' ')'

    $end             shift, and go to state 2
    TK_IDENTIFIERS   shift, and go to state 3
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_DEF           shift, and go to state 8
    TK_RET           shift, and go to state 9
    TK_SIGNOP        shift, and go to state 10
    TK_CONST         shift, and go to state 11
    TK_CONTINUE      shift, and go to state 12
    TK_BREAK         shift, and go to state 13
    TK_IF            shift, and go to state 14
    TK_FOR           shift, and go to state 15
    TK_WHILE         shift, and go to state 16
    TK_COMP          shift, and go to state 17
    '['              shift, and go to state 18
    '('              shift, and go to state 19

    prog_body           go to state 20
    array               go to state 21
    comp_vars           go to state 22
    variables           go to state 23
    constants           go to state 24
    function_head       go to state 25
    function_ret        go to state 26
    function_body       go to state 27
    commands            go to state 28
    function            go to state 29
    comps               go to state 30
    exp                 go to state 31
    statements          go to state 32
    break_statement     go to state 33
    continue_statement  go to state 34
    if_expr             go to state 35
    iff                 go to state 36
    for_statement       go to state 37
    while_statement     go to state 38
    funccall_statement  go to state 39


State 2

    0 $accept: input $end .

    $default  accept


State 3

   10 array: TK_IDENTIFIERS . '[' ']'
   11      | TK_IDENTIFIERS . '[' TK_INTCONST ']'
   12      | TK_IDENTIFIERS . '[' TK_IDENTIFIERS ']'
   13 comp_vars: TK_IDENTIFIERS .  [',', ':']
   47 exp: TK_IDENTIFIERS .  [TK_SMALLER, TK_BIGGER, TK_POWER, TK_EQ, TK_NEQ, TK_SIGNOP, TK_AND, TK_OR, TK_NOT, TK_ASSIGNOP, '=', '<', '>', '*', '/', '%', '(', '.', ';']
   93 funccall_statement: TK_IDENTIFIERS . '(' func_expr ')'
   94                   | TK_IDENTIFIERS . '(' ')'

    '['  shift, and go to state 40
    '('  shift, and go to state 41

    '('       [reduce using rule 47 (exp)]
    ','       reduce using rule 13 (comp_vars)
    ':'       reduce using rule 13 (comp_vars)
    $default  reduce using rule 47 (exp)


State 4

   48 exp: TK_INTCONST .

    $default  reduce using rule 48 (exp)


State 5

   46 exp: TK_FPCONST .

    $default  reduce using rule 46 (exp)


State 6

   71 exp: TK_BOOLCONST .

    $default  reduce using rule 71 (exp)


State 7

   70 exp: TK_CONSTSTRINGS .

    $default  reduce using rule 70 (exp)


State 8

   28 function_head: TK_DEF . TK_IDENTIFIERS '(' ')' ':'
   29              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' ':'
   30              | TK_DEF . TK_IDENTIFIERS '(' ')' TK_ARROW data_types ':'
   31              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' TK_ARROW data_types ':'
   32              | TK_DEF . TK_IDENTIFIERS '(' ')' TK_ARROW TK_IDENTIFIERS ':'
   33              | TK_DEF . TK_IDENTIFIERS '(' func_args ')' TK_ARROW TK_IDENTIFIERS ':'

    TK_IDENTIFIERS  shift, and go to state 42


State 9

   10 array: . TK_IDENTIFIERS '[' ']'
   11      | . TK_IDENTIFIERS '[' TK_INTCONST ']'
   12      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   34 function_ret: TK_RET .  [';']
   35             | TK_RET . exp
   46 exp: . TK_FPCONST
   47    | . TK_IDENTIFIERS
   48    | . TK_INTCONST
   49    | . TK_SIGNOP exp
   50    | . exp '=' exp
   51    | . exp '*' exp
   52    | . exp '/' exp
   53    | . exp '%' exp
   54    | . exp TK_ASSIGNOP exp
   55    | . exp TK_OR exp
   56    | . exp TK_AND exp
   57    | . exp TK_NOT exp
   58    | . exp TK_NEQ exp
   59    | . exp TK_EQ exp
   60    | . exp '<' exp
   61    | . exp '>' exp
   62    | . exp TK_SMALLER exp
   63    | . exp TK_BIGGER exp
   64    | . exp TK_SIGNOP exp
   65    | . exp TK_POWER exp
   66    | . exp '.' exp
   67    | . '(' exp ')'
   68    | . '[' exp ']'
   69    | . exp '(' exp ')'
   70    | . TK_CONSTSTRINGS
   71    | . TK_BOOLCONST
   72    | . array
   73    | . funccall_statement
   93 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
   94                   | . TK_IDENTIFIERS '(' ')'

    TK_IDENTIFIERS   shift, and go to state 43
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_SIGNOP        shift, and go to state 10
    '['              shift, and go to state 18
    '('              shift, and go to state 19

    $default  reduce using rule 34 (function_ret)

    array               go to state 44
    exp                 go to state 45
    funccall_statement  go to state 39


State 10

   10 array: . TK_IDENTIFIERS '[' ']'
   11      | . TK_IDENTIFIERS '[' TK_INTCONST ']'
   12      | . TK_IDENTIFIERS '[' TK_IDENTIFIERS ']'
   46 exp: . TK_FPCONST
   47    | . TK_IDENTIFIERS
   48    | . TK_INTCONST
   49    | . TK_SIGNOP exp
   49    | TK_SIGNOP . exp
   50    | . exp '=' exp
   51    | . exp '*' exp
   52    | . exp '/' exp
   53    | . exp '%' exp
   54    | . exp TK_ASSIGNOP exp
   55    | . exp TK_OR exp
   56    | . exp TK_AND exp
   57    | . exp TK_NOT exp
   58    | . exp TK_NEQ exp
   59    | . exp TK_EQ exp
   60    | . exp '<' exp
   61    | . exp '>' exp
   62    | . exp TK_SMALLER exp
   63    | . exp TK_BIGGER exp
   64    | . exp TK_SIGNOP exp
   65    | . exp TK_POWER exp
   66    | . exp '.' exp
   67    | . '(' exp ')'
   68    | . '[' exp ']'
   69    | . exp '(' exp ')'
   70    | . TK_CONSTSTRINGS
   71    | . TK_BOOLCONST
   72    | . array
   73    | . funccall_statement
   93 funccall_statement: . TK_IDENTIFIERS '(' func_expr ')'
   94                   | . TK_IDENTIFIERS '(' ')'

    TK_IDENTIFIERS   shift, and go to state 43
    TK_INTCONST      shift, and go to state 4
    TK_FPCONST       shift, and go to state 5
    TK_BOOLCONST     shift, and go to state 6
    TK_CONSTSTRINGS  shift, and go to state 7
    TK_SIGNOP        shift, and go to state 10
    '['              shift, and go to state 18
    '('              shift, and go to state 19

    array               go to state 44
    exp                 go to state 46
    funccall_statement  go to state 39


State 11

   18 constants: TK_CONST . TK_IDENTIFIERS '=' TK_INTCONST ':' data_types
   19          | TK_CONST . TK_IDENTIFIERS '=' TK_SIGNOP TK_INTCONST ':' data_types
   20          | TK_CONST . TK_IDENTIFIERS '=' TK_BOOLCONST ':' data_types
   21          | TK_CONST . TK_IDENTIFIERS '=' TK_CONSTSTRINGS ':' data_types
   22          | TK_CONST . TK_IDENTIFIERS '=' TK_FPCONST ':' data_types
   23          | TK_CONST . TK_IDENTIFIERS '=' TK_SIGNOP TK_FPCONST ':' data_types

    TK_IDENTIFIERS  shift, and go to state 47


State 12

   83 continue_statement: TK_CONTINUE .

    $default  reduce using rule 83 (continue_statement)


State 13

   82 break_statement: TK_BREAK .

    $default  reduce using rule 82 (break_statement)


State 14

   84 if_expr: TK_IF . '(' exp ')' ':'

    '('  shift, and go to state 48


State 15
